// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create a Breadcrumbs component with custom icon and chevron 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="arrow-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="pied-piper"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (inherit) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="inherit"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (large) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="large"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (medium) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="medium"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (normal) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (small) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (xlarge) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="xlarge"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (xsmall) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="xsmall"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (xxlarge) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="xxlarge"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a simple Breadcrumbs control with defaults (xxsmall) 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="xxsmall"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test Breadcrumbs select event 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test disabling the Breadcrumbs control 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making the Breadcrumbs invisible 1`] = `
<Breadcrumbs
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  chevron="chevron-right"
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  icon="paperclip"
  id={null}
  items={
    Array [
      Object {
        "name": "name1",
        "uri": "http://www.example1.com",
      },
      Object {
        "name": "name2",
        "uri": "http://www.example2.com",
      },
      Object {
        "name": "name3",
        "uri": "http://www.example3.com",
      },
    ]
  }
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Breadcrumbs"
  onSelect={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Breadcrumbs props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "chevron": "chevron-right",
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "icon": "paperclip",
  "id": null,
  "items": Array [],
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Breadcrumbs",
  "onSelect": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
